--- a/PokedexMvvm/Info.plist
+++ b/PokedexMvvm/Info.plist
@@ -19,5 +19,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SugarBomb.ttf</string>
+		<string>PokemonSolid.ttf</string>
+	</array>
 </dict>
 </plist>
